[tool.poetry]
name = "alien invasion"
version = "1.0.0"
description = "Alien Invasion"
authors = ["Christopher Caputo <christopher.caputo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
